--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -22,7 +22,7 @@ ul.left-aligned, ol.left-aligned {
 /* offset anchor links for fixed header */
 .anchor {
     scroll-margin-top: 60px;
-} 
+}
 
 .anchor:target, .active-anchor li.announcement-content {
     animation-delay: 2s;
@@ -107,7 +107,7 @@ div.three-wide > :last-of-type, div.two-wide > :last-of-type {
 
 /* PREVENT OVERWRITING OF NAVBAR COLOR IN CUSTOM STYLES */
 .navbar-fixed-top > div, .navbar-fixed-top #navbar {
-    background-color:transparent !important; 
+    background-color:transparent !important;
     background-image:none !important;
 }
 
@@ -407,6 +407,10 @@ ol > ol > ol {
     margin-left: 5px;
 }
 
+form > div.alert.alert-block.alert-danger {
+  margin-top: 8px;
+}
+
 /************ ICONS **********************/
 
 .icon-text {
@@ -500,7 +504,7 @@ iframe.summernotewidget.form-control {
 .form-group-summernote, .panel-summernote #div_id_docfile,
 .panel-summernote #div_id_files,
 .panel-summernote #div_id_attachments,
-.panel-summernote #div_id_award, 
+.panel-summernote #div_id_award,
 .panel-summernote #div_id_awards {
     margin-left: 15px;
     margin-right: 15px;
@@ -540,6 +544,10 @@ form .panel-body {
 
 .alert-block ul {
     padding-left: 20px;
+}
+
+form > div.alert.alert-block.alert-danger {
+  margin-top: 8px;
 }
 
 /******* Accordian ***********************/
