--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -43,8 +43,10 @@
                 <div class="visible-xs-inline navbar-mobile-xp-container">
                     <ul class="nav navbar-nav navbar-mobile-xp">
                         <li>
-                            <a href="{% url 'courses:marks' request.user.id %}"
-                                class="navbar-text-large-container">XP:
+                            {% comment %} # DISABLE MARKS {% endcomment %}
+                            {% comment %} <a href="{% url 'courses:marks' request.user.id %}" {% endcomment %}
+                            <a href="#" title="The Mark Calculations page is currently disabled, sorry!"
+                            class="navbar-text-large-container">XP:
                                 <span class="navbar-text-large"> {{ request.user.profile.xp_cached }}</span>
                             </a>
                         </li>
@@ -151,7 +153,9 @@
                 </li>
                 {% else %}
                 <li id="menu-xp" class="hidden-xs navbar-xp">
-                    <a href="{% url 'courses:marks' request.user.id %}"
+                    {% comment %} # DISABLE MARKS {% endcomment %}
+                    {% comment %} <a href="{% url 'courses:marks' request.user.id %}" {% endcomment %}
+                    <a href="#" title="The Mark Calculations page is currently disabled, sorry!"
                        class="navbar-text-large-container">XP:
                         <span class="navbar-text-large"> {{ request.user.profile.xp_cached }}</span>
                     </a>
