--- a/src/comments/templates/comments/comments.html
+++ b/src/comments/templates/comments/comments.html
@@ -44,9 +44,9 @@
         <ul>
         {% for document in comment.document_set.all %}
         <li class="file-link"><a  href="{{ document.docfile.url }}" target="_blank" >
-          {{ document.docfile|filename }}</a>
+          {{ document.docfile|filename|safe}}</a>
             {% if document.is_valid_portfolio_type %}
-            <a title = "Add {{ document.docfile|filename }} to your portfolio."
+            <a title = "Add {{ document.docfile|filename|safe }} to your portfolio."
                        href="{% url 'portfolios:art_add' document.id %}"
             class="btn btn-default btn-xs pull-right">Add to Portfolio</a>
             {% endif %}
