notifications emails update for multi-tenancy

--- a/src/announcements/templates/announcements/email_announcement.html
+++ b/src/announcements/templates/announcements/email_announcement.html
@@ -18,7 +18,7 @@ I take no responsibility for how the announcement looks in this email!</p>
 <hr>
 
 <p>Have a day!</p>
-<p>Love, Hackerspace AI</p>
+<p>Love, {{ config.deck_ai }}</p>
 
 <p><img alt="[Logo]" src="{{ scheme_and_domain }}{% site_logo_url %}"></p>
 <p>If you no longer want to receive these emails, <a href="{{scheme_and_domain}}{{profile_edit_url}}">edit your profile</a>.</p>
