WIP ere-enabling email with beat

--- a/src/notifications/templates/notifications/email_notifications.html
+++ b/src/notifications/templates/notifications/email_notifications.html
@@ -14,7 +14,7 @@
 </ul>
 
 <p>Have a day!</p>
-<p>Love, Hackerspace AI</p>
+<p>Love, {{ config.deck_ai }}</p>
 
 <p><img alt="[Logo]" src="{% site_logo_url %}"></p>
 <p>If you no longer want to receive these emails, edit your profile settings <a href="{{ profile_edit_url }}">here</a></p>
