fix announcement emails; fixes #460

--- a/src/notifications/templates/notifications/email_notifications.html
+++ b/src/notifications/templates/notifications/email_notifications.html
@@ -17,6 +17,6 @@
 <p>Have a day!</p>
 <p>Love, {{ config.deck_ai }}</p>
 
-<p><img alt="[Logo]" src="{{ scheme_and_domain }}{% site_logo_url %}"></p>
-<p>If you no longer want to receive these emails, <a href="{{scheme_and_domain}}{{profile_edit_url}}">edit your profile</a>.</p>
+<p><img alt="[Logo]" src="{{ root_url }}{% site_logo_url %}"></p>
+<p>If you no longer want to receive these emails, <a target="_blank" href="{{root_url}}{{profile_edit_url}}">edit your profile</a>.</p>
 </body>
