--- a/src/announcements/templates/announcements/email_announcement.html
+++ b/src/announcements/templates/announcements/email_announcement.html
@@ -6,7 +6,7 @@
 <p>Hello,</p>
 
 <p>A new announcement was just published!  To view it in all its proper glory with images and videos and stuff, 
-<a target="_blank" href="{{ scheme_and_domain }}{{ absolute_url }}">view it online here.</a> 
+<a target="_blank" href="{{ root_url }}{{ absolute_url }}">view it online here.</a> 
 I take no responsibility for how the announcement looks in this email!</p>
 
 <hr>
@@ -20,6 +20,6 @@ I take no responsibility for how the announcement looks in this email!</p>
 <p>Have a day!</p>
 <p>Love, {{ config.deck_ai }}</p>
 
-<p><img alt="[Logo]" src="{{ scheme_and_domain }}{% site_logo_url %}"></p>
-<p>If you no longer want to receive these emails, <a href="{{scheme_and_domain}}{{profile_edit_url}}">edit your profile</a>.</p>
+<p><img alt="[Logo]" src="{{ root_url }}{% site_logo_url %}"></p>
+<p>If you no longer want to receive these emails, <a target="_blank" href="{{root_url}}{{profile_edit_url}}">edit your profile</a>.</p>
 </body>
