Use fixed width for admin buttons

--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -138,7 +138,7 @@
 
                     {#      Admin buttons #}
                     <td>
-                        <div class="btn-group">
+                        <div class="btn-group action-btn-group">
                             <a href="{% url 'profiles:comment_ban_toggle' object.id %}"
                                title="{% if object.banned_from_comments %}Remove comment ban
                            {% else %}Ban student from public comments{% endif %}"
