fix reference to config.favicon; closes #250

--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -34,7 +34,12 @@
 <link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
 
 <!-- Mobile device icons -->
-{% if not config.hs_favicon %}
+<!-- config.favicon: {{ config.favicon }} -->
+<link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
+
+{% if config.favicon %}
+<link rel="icon" href="{{ config.get_favicon_url }}">
+{% else %}
 <link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
 <link rel="apple-touch-icon" sizes="60x60" href="{% static 'icon/apple-icon-60x60.png' %}">
 <link rel="apple-touch-icon" sizes="72x72" href="{% static 'icon/apple-icon-72x72.png' %}">
@@ -54,4 +59,4 @@
 <meta name="theme-color" content="#ffffff">
 {% endif %}
 
-<link rel="icon" href="{{ config.get_favicon_url }}">
+
