--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -76,10 +76,21 @@
             </th>
 
             {% if request.user.is_staff %}
+            <!-- Uses `last_sub_datetime` for sorting -->
+            <!-- Needed to do this since we can't rely on the content of `last_sub` -->
             <th data-sortable='true' data-field='last_sub' data-sort-name='last_sub_datetime'>
                 Last Quest
             </th>
             <th data-field='last_sub_datetime' data-visible='false'></th>
+            <!-- End sorting group -->
+
+            <!-- Uses `last_login_datetime` for sorting-->
+            <th data-sortable='true' data-field='last_login' data-sort-name='last_login_datetime'>
+              Last Login
+            </th>
+            <th data-field='last_login_datetime' data-visible='false'></th>
+            <!-- End sorting group -->
+
             <th data-sortable='true' data-field='sn'>
                 Student #
             </th>
@@ -130,10 +141,22 @@
                               &nbsp;Never
                           {% endif %}
                       </td>
+                      <!-- `last_sub_datetime` -->
                       <td>
                         {{ last_submission.time_completed|date:"y/m/d" }} {{ last_submission.time_completed|time:"H:i:s"}}
                       </td>
+                      <!-- end `last_sub_datetime` -->
+
                     {% endwith %}
+                    <td>
+                      {{ object.user.last_login|date:'y/m/d' }}<br>
+                      <small>{{ object.user.last_login|timesince }} ago</small>
+                    </td>
+                    <!-- `last_login_datetime` -->
+                    <td>
+                      {{ object.user.last_login|date:"y/m/d" }} {{ object.user.last_login|time:"H:i:s"}}
+                    </td>
+                    <!-- end `last_login_datetime` -->
                     <td><a href="{% url 'profiles:profile_detail' object.id %}">{{ object.user }}</a></td>
 
                     {#      Admin buttons #}
