Add last login info in student profile

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -90,6 +90,9 @@
         <p>Student Number: {% if object.student_number %}{{ object.student_number}}{% else %}<i>None. Edit your profile!</i>{% endif %}</p>
         <p>Grad Year: {% if object.grad_year %}{{ object.grad_year}}{% else %}<i>None. Edit your profile!</i>{% endif %}</p>
         <p>Account Created: {{ object.datetime_created}} ({{ object.datetime_created|timesince}} ago)</p>
+        {% if request.user.is_staff %}
+          <p>Last Login: {% if object.user.last_login %} {{ object.user.last_login}} ({{ object.user.last_login|timesince }} ago) {% else %}&mdash;{% endif %}</p>
+        {% endif %}
       </div>
      </div> <!--panel -->
      <!-- COURSES -->
