--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -2,19 +2,22 @@
 
 {% block heading_inner %}{{ object.get_preferred_name }}'s Profile
     <div class="btn-group" role="group">
-  <a class="btn btn-info" title="Edit your Profile"
-    href="{% url 'profiles:profile_update' object.id %}"
-    role="button"><i class="fa fa-cog"></i></a>
-  <a class="btn btn-warning" title="Change your Password"
-    href="{% url 'account_change_password' %}"
-    role="button"><i class="fa fa-key"></i></a>
-  {% comment %} # DISABLE MARKS {% endcomment %}
-  {% comment %} <a class= "btn btn-primary" title="View your Mark Calculations"
-    href="{% url 'courses:marks' object.user.id %}"
-    role="button"><i class="fa fa-line-chart"></i></a> {% endcomment %}
-  <a class= "btn btn-success" title="View your Portfolio"
-    href="{% url 'portfolios:detail' object.user.id %}"
-    role="button"><i class="fa fa-picture-o"></i></a>
+      <a class="btn btn-info" title="Edit your Profile"
+        href="{% url 'profiles:profile_update' object.id %}"
+        role="button"><i class="fa fa-cog"></i></a>
+      <a class="btn btn-warning" title="Change your Password"
+        href="{% url 'account_change_password' %}"
+        role="button"><i class="fa fa-key"></i></a>
+
+      {% if config.display_marks_calculation %}
+        <a class= "btn btn-primary" title="View your Mark Calculations"
+          href="{% url 'courses:marks' object.user.id %}"
+          role="button"><i class="fa fa-line-chart"></i></a>
+      {% endif %}
+
+      <a class= "btn btn-success" title="View your Portfolio"
+        href="{% url 'portfolios:detail' object.user.id %}"
+        role="button"><i class="fa fa-picture-o"></i></a>
     </div>
 {% endblock %}
 
