Restore navbar url introduced in 32cf0

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -150,9 +150,10 @@
                 </li>
                 {% else %}
                 <li id="menu-xp" class="hidden-xs navbar-xp">
-                    {% comment %} # DISABLE MARKS {% endcomment %}
-                    {% comment %} <a href="{% url 'courses:marks' request.user.id %}" {% endcomment %}
-                    <a href="#" title="The Mark Calculations page is currently disabled, sorry!"
+                    {% url 'courses:marks' request.user.id as marks_url %}
+                    <a
+                      href="{% if config.display_marks_calculation %} {{ marks_url }} {% else %}#{% endif %}"
+                      title="View your marks calculation"
                        class="navbar-text-large-container">XP:
                         <span class="navbar-text-large"> {{ request.user.profile.xp_cached }}</span>
                     </a>
