Add basic prereq options in main Quest form; closes #543

--- a/src/quest_manager/templates/quest_manager/quest_form.html
+++ b/src/quest_manager/templates/quest_manager/quest_form.html
@@ -4,6 +4,7 @@
 
 {% block head %}
   <script src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css">
   {{ form.media }}
 {% endblock %}
 
@@ -14,4 +15,11 @@
   {% csrf_token %}
   {% crispy form %}
 </form>
+{% endblock %}
+
+
+{% block js %}
+<script>
+    $.fn.select2.defaults.set( "theme", "bootstrap" );
+</script>
 {% endblock %}
