better 500 error; closes #554

--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -2,6 +2,11 @@
 
 {% block content_outer %}
 
-<h1>500 Error: Server Error. We have been alerted, please try again later.</h1>
+<h1>500 Server Error<h1>
+
+<p>We have been alerted, but please consider 
+<a target="_blank" href="https://github.com/timberline-secondary/hackerspace/issues/new">submitting a bug report</a> if you think this is a bug! 
+If you do, please describe how you got the error, including any links if relevant.
+</p>
 
 {% endblock %}
