--- a/src/portfolios/templates/portfolios/form.html
+++ b/src/portfolios/templates/portfolios/form.html
@@ -11,7 +11,7 @@
 {% block content %}
 
     <h1>stuff</h1>
-<form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
+<form action="" enctype="multipart/form-data" method="post">{% csrf_token %}
 
 
   {{ form|crispy }}
