--- a/src/announcements/templates/announcements/form.html
+++ b/src/announcements/templates/announcements/form.html
@@ -11,7 +11,7 @@
 {% block heading_inner %} {{ heading }}{% endblock %}
 
 {% block content %}
-<form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
+<form action="" enctype="multipart/form-data" method="post">{% csrf_token %}
   <a href="{% url 'announcements:list' %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
   {{ form|crispy }}
