--- a/src/badges/templates/badges/badge_form.html
+++ b/src/badges/templates/badges/badge_form.html
@@ -12,7 +12,7 @@
 {% block heading_inner %} {{ heading }}{% endblock %}
 
 {% block content %}
-<form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
+<form action="" enctype="multipart/form-data" method="post">{% csrf_token %}
   <a href="{% url 'badges:list' %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
   <a href="/admin/badges/badge/{{object.id}}" role="button" class="btn btn-default">via Admin</a>
