--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -8,7 +8,7 @@
 {% block heading %}Configuration<i class="fa fa-cog pull-right"></i>{% endblock %}
 {% block content %}
 <h3>Site Settings</h3>
-<form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
+<form action="" enctype="multipart/form-data" method="post">{% csrf_token %}
     {{ form|crispy }}
     <input type="submit" value="Save" class="btn btn-primary"/>
 </form>
