--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -2,7 +2,7 @@
 
 {% block content_outer %}
 
-<h1>500 Server Error<h1>
+<h1>500 Server Error</h1>
 
 <p>We have been alerted, but please consider 
 <a target="_blank" href="https://github.com/timberline-secondary/hackerspace/issues/new">submitting a bug report</a> if you think this is a bug! 
