--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -54,7 +54,7 @@
     {% endif %}
     <div id="cy"></div>
 
-{%  endblock %}
+{% endblock %}
 {% block js %}
 <script>
     window.jQuery || document.write('<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"><\/script>')
@@ -71,39 +71,7 @@
         window.location.href = this.data('href');
     });
 
-    {% if request.user.profile.dark_theme %}
-    // http://js.cytoscape.org/#cy.style
-    //TODO: try cy.batch()  http://js.cytoscape.org/#cy.batch
-    $(document).ready(function() {
-            cy.style()
-                    .selector('node')
-                    .style({
-                        'color': '#c8c8c8',
-                        'background-opacity': 1,
-                        'background-color': '#32383e',
-                    })
-                    .selector('node.link')
-                    .style({
-                        'color': '#609dd2',
-                        'border-color': '#609dd2',
-                        'background-opacity': 1,
-                    })
-                    .selector('node.link_hover')
-                    .style({
-                        'background-opacity': 1,
-                        'background-color': '#3e444c',
-                        'color': '#88b5dd',
-                        'border-color': '#88b5dd',
-                    })
-                    .selector('node.campaign')
-                    .style({
-                        'background-opacity': 0,
-                        'border-color': '#5A5A5A',
-                    })
-                    .update()
 
-    });
-    {% endif %}
 
     // scape.style_set
     {{ scape.style_set.javascript|safe }}
@@ -116,32 +84,54 @@
     });
 
 
-    $("#btn-fullscreen").click(function() {
-        $("#cy").toggleClass("fullscreen");
-        $("#fullscreen").toggleClass("fullscreen-toggle");
-    })
+    cy.on('mouseover', '[href]', function(){
+        $('#cy').css('cursor', 'pointer');
+        this.addClass('link_hover')
+    });
+    cy.on('mouseout', '[href]', function(){
+        $('#cy').css('cursor', 'move');
+        this.removeClass('link_hover')
+    });
 
-    $("#btn-print").click(function() {
-        var png64 = cy.png({
-            full: true
-        });
-        var windowContent = '<!DOCTYPE html>';
-        windowContent += '<html>'
-        windowContent += '<head><title>Print canvas</title></head>';
-        windowContent += '<body>'
-        windowContent += '<img src="' + png64 + '">';
-        windowContent += '</body>';
-        windowContent += '</html>';
-        var printWin = window.open();
-        printWin.document.open();
-        printWin.document.write(windowContent);
-        printWin.document.close();
-        printWin.focus();
-        printWin.print();
+    // nodes that don't link
+    cy.on('mouseover', '[^href]', function(){
+        $('#cy').css('cursor', 'default');
+    });
+    cy.on('mouseout', '[^href]', function(){
+        $('#cy').css('cursor', 'move');
     });
 
 
+    cy.on('ready', function () {
+        updateBounds();
+    });
+
+
+    $(document).ready(function() { 
+      updateBounds();
+      //if they resize the window, resize the diagram
+      $(window).resize(function () {
+        updateBounds();
+      });
+        cy.center();
+        cy.resize();
+
+
+    }); // dom ready
+
+    var updateBounds = function () {
+        var bounds = cy.elements().boundingBox();
+        $('#cy').css('height', bounds.h + 50);
+        cy.center();
+        cy.resize();
+    };
 
 </script>
 
-{%  endblock %}
+<script src="{% static 'djcytoscape/js/maps.js' %}"></script>
+
+{% if request.user.profile.dark_theme %}
+ <script src="{% static 'djcytoscape/js/maps-dark.js' %}"></script>
+{% endif %}
+
+{% endblock %}
