--- a/src/djcytoscape/static/djcytoscape/css/djcytoscape.css
+++ b/src/djcytoscape/static/djcytoscape/css/djcytoscape.css
@@ -1,9 +1,9 @@
 #cy {
   width: 100%;
   position: relative;
-  left: 0px;
+  /* left: 0px; */
   cursor: move;
-  box-shadow: inset 0 0 10px #ccc;
-  border-radius: 8px;
+  box-shadow: 0 0 2px 1px rgba(12, 12, 12, 0.6);;
+  border-radius: 4px;
   min-height: 52vh;
 }
