more map tweaks; enable zooming incl pinch to zoom; closes #534

--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -71,8 +71,8 @@
       minZoom: 0.5,
       maxZoom: 1.5,
       wheelSensitivity: 0.1,
-      zoomingEnabled: false,
-      userZoomingEnabled: false,
+      zoomingEnabled: true,
+      userZoomingEnabled: true,
       autoungrabify: true,
       autounselectify: true,
       elements: {{ elements|safe }},
