only enable zooming on mobile (conflicts with scrolling otherwise); relates to #534

--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -73,7 +73,7 @@
       zoom: 3,
       wheelSensitivity: 0.1,
       zoomingEnabled: true,
-      userZoomingEnabled: true,
+      userZoomingEnabled: false,
       autoungrabify: true,
       autounselectify: true,
       elements: {{ elements|safe }},
