remove semester from courses in profile; closes #571

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -138,7 +138,7 @@
                    (<a href="/admin/courses/coursestudent/{{course.id}}/">edit</a>)
                  {% endif %}
                  <br/>
-                 <small>{{course.block}} Block, Semester {{course.semester.number}}, {{course.semester}}
+                 <small>{{course.block}} Block, {{course.semester}}
                  <br/>Final XP: {{course.final_xp}}
                  </small>
                </li>
