Change django admin references to Site Administration; closes #602

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -144,7 +144,7 @@
                         <li><a href="{% url 'config:site_config_update_own' %}"><i class="fa fa-fw fa-sliders"></i>&nbsp;Site Configuration</a></li>
                         <li role="separator" class="divider"></li>
                         <li class="dropdown-header">Database</li>
-                        <li><a href="/admin"><i class="fa fa-fw fa-database"></i>&nbsp;Django Admin</a></li>
+                        <li><a href="/admin"><i class="fa fa-fw fa-database"></i>&nbsp;Site Administration</a></li>
                         <li role="separator" class="divider"></li>
                         <li class="dropdown-header">ByteDeck</li>
                         <li><a href="https://github.com/bytedeck/bytedeck/blob/develop/CHANGELOG.md"><i class="fa fa-fw fa-history"></i>&nbsp;Changelog</a></li>
