--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -22,7 +22,7 @@
     <div class="panel accordian
       {% if s.id == active_id %} active{% endif %}
       {% if object.sticky %}panel-info
-      {% elif s.game_lab_transfer %}panel-muted
+      {% elif s.do_not_grant_xp %}panel-muted
       {% else %}panel-default{% endif %}">
       <div class="panel-heading accordian accordian-trigger panel-heading-tall
         {% if s.id == active_id %} active {% endif %}"
